tests/NormalTests/paczka1/small_fuzzy/46725366.err
Error in line 2: o8Ux S589 39,1
Error in line 3: o8Ux A653 34,4
Error in line 11: 1gZFkiCSLpG S589 33,8
Error in line 13: A716 A716 88,1
